feat: add deeplink compression logic

--- a/packages/sdk-multichain/package.json
+++ b/packages/sdk-multichain/package.json
@@ -39,6 +39,7 @@
     "fake-indexeddb": "^6.0.1",
     "jsdom": "^26.1.0",
     "nock": "^14.0.4",
+    "pako": "^2.1.0",
     "prettier": "^3.3.3",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3",
@@ -62,6 +63,7 @@
     "@metamask/sdk-multichain-ui": "workspace:^",
     "@metamask/utils": "^11.4.0",
     "@paulmillr/qr": "^0.2.1",
+    "@types/pako": "^2.0.4",
     "bowser": "^2.11.0",
     "cross-fetch": "^4.1.0",
     "eciesjs": "^0.4.15",
