--- a/packages/sdk-communication-layer/package.json
+++ b/packages/sdk-communication-layer/package.json
@@ -46,7 +46,7 @@
     "watch": "rollup -c --bundleConfigAsCjs -w"
   },
   "dependencies": {
-    "@metamask/sdk-analytics": "workspace:*",
+    "@metamask/sdk-analytics": "^0.0.5",
     "bufferutil": "^4.0.8",
     "date-fns": "^2.29.3",
     "debug": "4.3.4",
