--- a/packages/sdk-react-ui/package.json
+++ b/packages/sdk-react-ui/package.json
@@ -45,13 +45,13 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
-    "@metamask/sdk": "workspace:^",
-    "@metamask/sdk-react": "workspace:*",
+    "@metamask/sdk": "0.33.1",
+    "@metamask/sdk-react": "0.33.1",
     "ethers": "^5.6.9",
     "mersenne-twister": "^1.1.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-jazzicon": "^1.0.4",
-    "viem": "latest",
+    "viem": "^2.38.0",
     "wagmi": "1.4.12"
   },
   "devDependencies": {
