--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -51,9 +51,9 @@
     "@babel/runtime": "^7.26.0",
     "@metamask/onboarding": "^1.0.1",
     "@metamask/providers": "16.1.0",
-    "@metamask/sdk-analytics": "workspace:*",
-    "@metamask/sdk-communication-layer": "workspace:*",
-    "@metamask/sdk-install-modal-web": "workspace:*",
+    "@metamask/sdk-analytics": "^0.0.5",
+    "@metamask/sdk-communication-layer": "^0.33.1",
+    "@metamask/sdk-install-modal-web": "^0.32.1",
     "@paulmillr/qr": "^0.2.1",
     "bowser": "^2.9.0",
     "cross-fetch": "^4.0.0",
