update changelog scripts to match core

--- a/packages/devnext/package.json
+++ b/packages/devnext/package.json
@@ -6,8 +6,10 @@
     "dev": "next dev -p 3333",
     "build": "next build",
     "start": "next start",
+    "changelog:update": "../../scripts/update-changelog.sh devnext",
+    "changelog:validate": "../../scripts/validate-changelog.sh devnext",
     "lint": "yarn lint:eslint",
-    "lint:changelog": "../../scripts/validate-changelog.sh @metamask/sdk",
+    "lint:changelog": "../../scripts/validate-changelog.sh devnext",
     "lint:eslint": "eslint . --cache --ext js,ts,tsx",
     "lint:fix": "yarn lint:eslint --fix && yarn lint:misc --write",
     "lint:misc": "prettier '**/*.json' '**/*.md' '!CHANGELOG.md' --ignore-path ../../.gitignore",
