--- a/packages/sdk-multichain/package.json
+++ b/packages/sdk-multichain/package.json
@@ -18,6 +18,8 @@
     "build": "yarn clean && npx tsup",
     "build:post-tsc": "echo 'N/A'",
     "build:pre-tsc": "echo 'N/A'",
+    "changelog:update": "../../scripts/update-changelog.sh @metamask/multichain-sdk",
+    "changelog:validate": "../../scripts/validate-changelog.sh @metamask/multichain-sdk",
     "lint": "yarn biome lint ./src",
     "lint:ci": "yarn biome ci ./src",
     "lint:fix": "yarn biome format --write ./src",
