--- a/packages/sdk-socket-server-next/package.json
+++ b/packages/sdk-socket-server-next/package.json
@@ -24,8 +24,10 @@
     "debug": "nodemon --exec 'NODE_ENV=development ts-node --transpile-only src/index.ts'",
     "debug:redis": "cross-env NODE_ENV=development ts-node --transpile-only src/redis-check.ts",
     "docker:debug": "yarn docker:redis && docker compose up appdev",
+    "changelog:update": "../../scripts/update-changelog.sh @metamask/sdk-socket-server-scale",
+    "changelog:validate": "../../scripts/validate-changelog.sh @metamask/sdk-socket-server-scale",
     "lint": "yarn lint:eslint && yarn lint:misc --check",
-    "lint:changelog": "yarn auto-changelog validate",
+    "lint:changelog": "../../scripts/validate-changelog.sh @metamask/sdk-socket-server-scale",
     "lint:eslint": "eslint .",
     "lint:fix": "yarn lint:eslint --fix && yarn lint:misc --write",
     "lint:misc": "prettier '**/*.json' '**/*.md' '!CHANGELOG.md' --ignore-path ../../.gitignore",
