--- a/packages/sdk-analytics/package.json
+++ b/packages/sdk-analytics/package.json
@@ -7,6 +7,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsup src/index.ts --dts --format esm,cjs",
+    "changelog:update": "../../scripts/update-changelog.sh @metamask/sdk-analytics",
+    "changelog:validate": "../../scripts/validate-changelog.sh @metamask/sdk-analytics",
     "lint": "eslint src --ext .ts,.tsx --ignore-pattern 'src/schema.ts'",
     "lint:fix": "eslint src --ext .ts,.tsx --fix --ignore-pattern 'src/schema.ts'",
     "lint:changelog": "../../scripts/validate-changelog.sh @metamask/sdk-analytics",
