--- a/packages/sdk-install-modal-web/package.json
+++ b/packages/sdk-install-modal-web/package.json
@@ -34,6 +34,8 @@
     "build:pre-tsc": "echo 'N/A'",
     "build:release": "yarn version && stencil build",
     "clean": "rimraf ./dist && rimraf ./loader",
+    "changelog:update": "../../scripts/update-changelog.sh @metamask/sdk-install-modal-web",
+    "changelog:validate": "../../scripts/validate-changelog.sh @metamask/sdk-install-modal-web",
     "lint": "yarn lint:eslint && yarn lint:misc --check",
     "lint:changelog": "../../scripts/validate-changelog.sh @metamask/sdk-install-modal-web",
     "lint:eslint": "eslint . --cache --ext js,ts",
