--- a/packages/sdk-react-native/package.json
+++ b/packages/sdk-react-native/package.json
@@ -24,6 +24,8 @@
     "build:dev": "rm -rf .rollup.cache && yarn build && cd .. && cd examples/reactNativeSdkDemo && rm -rf node_modules && rm -rf .yarn && yarn && cd ios && rm -rf Podfile.lock && pod install --repo-update && cd ..",
     "clean": "rimraf dist",
     "dev": "rollup -c -w",
+    "changelog:update": "../../scripts/update-changelog.sh @metamask/sdk-react-native",
+    "changelog:validate": "../../scripts/validate-changelog.sh @metamask/sdk-react-native",
     "lint": "yarn lint:eslint && yarn lint:misc --check",
     "lint:changelog": "../../scripts/validate-changelog.sh @metamask/sdk-react-native",
     "lint:eslint": "eslint . --cache --ext js,ts",
