--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -30,6 +30,8 @@
     "typecheck": "tsc --noEmit",
     "clean": "rimraf ./dist",
     "size": "node bundle-size && size-limit",
+    "changelog:update": "../../scripts/update-changelog.sh @metamask/sdk",
+    "changelog:validate": "../../scripts/validate-changelog.sh @metamask/sdk",
     "lint": "yarn lint:eslint && yarn lint:misc --check",
     "lint:changelog": "../../scripts/validate-changelog.sh @metamask/sdk",
     "lint:eslint": "eslint . --cache --ext js,ts",
