--- a/packages/devnext/package.json
+++ b/packages/devnext/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "changelog:update": "../../scripts/update-changelog.sh devnext",
     "changelog:validate": "../../scripts/validate-changelog.sh devnext",
+    "changelog:format": "../../scripts/format-changelog.sh devnext",
     "lint": "yarn lint:eslint",
     "lint:changelog": "../../scripts/validate-changelog.sh devnext",
     "lint:eslint": "eslint . --cache --ext js,ts,tsx",
