--- a/packages/sdk-multichain-ui/package.json
+++ b/packages/sdk-multichain-ui/package.json
@@ -36,6 +36,7 @@
     "clean": "rimraf ./dist && rimraf ./loader",
     "changelog:update": "../../scripts/update-changelog.sh @metamask/sdk-multichain-ui",
     "changelog:validate": "../../scripts/validate-changelog.sh @metamask/sdk-multichain-ui",
+    "changelog:format": "../../scripts/format-changelog.sh @metamask/sdk-multichain-ui",
     "lint": "yarn lint:eslint && yarn lint:misc --check",
     "lint:changelog": "../../scripts/validate-changelog.sh @metamask/sdk-multichain-ui",
     "lint:eslint": "eslint . --cache --ext js,ts",
