--- a/packages/sdk-ui/package.json
+++ b/packages/sdk-ui/package.json
@@ -31,6 +31,7 @@
     "deploy-storybook": "gh-pages -d storybook-static",
     "changelog:update": "../../scripts/update-changelog.sh @metamask/sdk-ui",
     "changelog:validate": "../../scripts/validate-changelog.sh @metamask/sdk-ui",
+    "changelog:format": "../../scripts/format-changelog.sh @metamask/sdk-ui",
     "lint": "echo 'n/a'",
     "lint:eslint": "eslint . --cache \"src/**/*.{js,ts,tsx}\"",
     "lint:changelog": "../../scripts/validate-changelog.sh @metamask/sdk-ui",
