--- a/packages/sdk-react-ui/package.json
+++ b/packages/sdk-react-ui/package.json
@@ -36,6 +36,7 @@
     "dev": "rollup -c -w",
     "changelog:update": "../../scripts/update-changelog.sh @metamask/sdk-react-ui",
     "changelog:validate": "../../scripts/validate-changelog.sh @metamask/sdk-react-ui",
+    "changelog:format": "../../scripts/format-changelog.sh @metamask/sdk-react-ui",
     "lint": "yarn lint:eslint && yarn lint:misc --check",
     "lint:changelog": "../../scripts/validate-changelog.sh @metamask/sdk-react-ui",
     "lint:eslint": "eslint . --cache --ext js,ts",
