--- a/packages/sdk-react/package.json
+++ b/packages/sdk-react/package.json
@@ -37,6 +37,7 @@
     "dev": "rollup -c -w --bundleConfigAsCjs",
     "changelog:update": "../../scripts/update-changelog.sh @metamask/sdk-react",
     "changelog:validate": "../../scripts/validate-changelog.sh @metamask/sdk-react",
+    "changelog:format": "../../scripts/format-changelog.sh @metamask/sdk-react",
     "lint": "yarn lint:eslint && yarn lint:misc --check",
     "lint:changelog": "../../scripts/validate-changelog.sh @metamask/sdk-react",
     "lint:eslint": "eslint . --cache --ext js,ts",
