--- a/packages/sdk-multichain/package.json
+++ b/packages/sdk-multichain/package.json
@@ -33,6 +33,7 @@
     "@metamask/auto-changelog": "^3.4.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@types/jsdom": "^21.1.7",
+    "@types/pako": "^2.0.4",
     "@types/ws": "^8.18.1",
     "@vitest/coverage-v8": "^3.2.4",
     "esbuild-plugin-umd-wrapper": "^3.0.0",
@@ -66,6 +67,7 @@
     "cross-fetch": "^4.1.0",
     "eciesjs": "^0.4.15",
     "eventemitter3": "^5.0.1",
+    "pako": "^2.1.0",
     "uuid": "^11.1.0",
     "ws": "^8.18.3"
   }
