refactor: rename SDK terminology to Connect terminology
- Rename MultichainSDK to MultichainConnect
- Rename SDKState to ConnectState
- Rename SDKEvents to ConnectEvents
- Rename createMetamaskSDK to createMetamaskConnect
- Rename SDKVersion to ConnectVersion component
- Update sdkVersion to connectVersion properties
- Update build configuration global names
- Update documentation and comments to use 'MetaMask Connect Module'
- Update test files and mock references
- Update logger namespaces and package descriptions

--- a/packages/sdk-multichain-ui/package.json
+++ b/packages/sdk-multichain-ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@metamask/sdk-multichain-ui",
   "version": "0.0.0",
-  "description": "MetaMask SDK Install Modal for Web",
+  "description": "MetaMask Connect Install Modal for Web",
   "homepage": "https://github.com/MetaMask/metamask-sdk#readme",
   "bugs": {
     "url": "https://github.com/MetaMask/metamask-sdk/issues"
