--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/MetaMask/metamask-sdk"
   },
   "workspaces": [
+    "packages/connect-evm",
     "packages/sdk-socket-server-next",
     "packages/sdk-install-modal-web",
     "packages/sdk-multichain-ui",
