--- a/packages/connect-evm/package.json
+++ b/packages/connect-evm/package.json
@@ -46,7 +46,13 @@
     "test": "jest",
     "test:clean": "jest --clearCache",
     "test:verbose": "jest --verbose",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "lint": "biome lint .",
+    "lint:fix": "biome lint --write .",
+    "format": "biome format .",
+    "format:fix": "biome format --write .",
+    "check": "biome check .",
+    "check:fix": "biome check --write ."
   },
   "devDependencies": {
     "@metamask/auto-changelog": "^3.4.4",
